sync invalid spring boot neo4j updates